# 42-fdf-3DMap.c

./: CMakeLists.txt  Makefile  coordo_to_get.txt  fdf  notes.txt
.build/srcs/: events.d  init.d  main.d  parsing.d
includes/: draw.h  error_management.h  events.h  init.h  isometric_projection.h  isometric_transform.h  libx.h  parsing.h
libft/: Makefile
libft/inc/: get_next_line.h  libft.h
libft/src/: utils.c
libft/src/ft_str/: ft_split.c
libft/src/gnl/: get_next_line.c  get_next_line_utils.c
maps/: 100-62.fdf  50-4.fdf  basictest.fdf  elem-fract.fdf  elem2.fdf  pyramide.fdf  test.fdf
mlx_linux/: mlx.h  mlx_clear_window.c  mlx_destroy_image.c  mlx_destroy_window.c  mlx_expose_hook.c  mlx_ext_randr.c  mlx_flush_event.c  mlx_get_color_value.c  mlx_get_data_addr.c  mlx_hook.c  mlx_init.c  mlx_int.h  mlx_int_anti_resize_win.c  mlx_int_do_nothing.c  mlx_int_get_visual.c  mlx_int_param_event.c  mlx_int_set_win_event_mask.c  mlx_int_str_to_wordtab.c  mlx_int_wait_first_expose.c  mlx_key_hook.c  mlx_lib_xpm.c  mlx_loop.c  mlx_loop_hook.c  mlx_mouse.c  mlx_mouse_hook.c  mlx_new_image.c  mlx_new_window.c  mlx_pixel_put.c  mlx_put_image_to_window.c  mlx_rgb.c  mlx_screen_size.c  mlx_string_put.c  mlx_xpm.c
mlx_linux/man/man1/: mlx_new_image.1
mlx_linux/man/man3/: mlx_loop.3  mlx_new_image.3
srcs/: draw.c  error_management.c  events.c  init.c  isometric_projection.c  isometric_tranform.c  main.c  parsing.c  parsing_utils.c
